--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepublish": "npm run build",
+    "lint": "prettier --write src/**/*.{js,css} && eslint",
     "publish": "gh-pages -d build"
   },
   "eslintConfig": {
@@ -39,6 +40,11 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.13.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "gh-pages": "^3.1.0",
+    "prettier": "^2.1.2"
   }
 }
