--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "_postinstall": "husky install",
+    "prepublish": "pinst --disable",
+    "postpublish": "pinst --enable",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepublish": "npm run build",
+    "predeploy": "npm run build",
+    "lintfix": "prettier --write src/**/*.{js,css} && eslint --fix",
     "lint": "prettier --write src/**/*.{js,css} && eslint",
-    "publish": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +49,8 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "gh-pages": "^3.1.0",
+    "husky": "^5.0.0-beta.0",
+    "pinst": "^2.0.0",
     "prettier": "^2.1.2"
   }
 }
