add eslint standard

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,13 @@
 {
-  "extends": ["prettier"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "prettier",
+    "prettier-standard"
+  ],
   "plugins": ["prettier"],
   "parser": "babel-eslint",
   "rules": {
     "prettier/prettier": ["error"]
   }
 }
-
