--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,9 +5,11 @@
     "prettier",
     "prettier-standard"
   ],
-  "plugins": ["prettier"],
+  "plugins": ["prettier", "react-hooks"],
   "parser": "babel-eslint",
   "rules": {
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "error",
     "prettier/prettier": ["error"],
     "react/prop-types": 0
   }
