--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-standard": "^4.0.2",
     "gh-pages": "^3.1.0",
     "husky": "^4.3.0",
